--- a/week 4/grid/css/style1.css
+++ b/week 4/grid/css/style1.css
@@ -20,7 +20,7 @@ body{
 .wrapper{
   display:grid;
   grid-template-columns: 2fr 1fr 1fr;
-  grid-gap:em;
+  grid-gap:1.5em;
 
   /* 
   This will result on four columns, each one of 1fr: 
@@ -73,7 +73,7 @@ img{
 .nested{
   display:grid;
   grid-template-columns:repeat(3, 1fr);
-  grid-auto-rows: 50px;
+  grid-auto-rows: 40px;
   grid-gap:1em;
 }
 
@@ -86,7 +86,11 @@ h1{
    padding-top: 20px;
 }
 
-
+@media (max-width: 750px) {
+  .wrapper { 
+    grid-template-columns: repeat(2, 1fr);
+   }
+}
 
 p+p{
    text-indent: 2em;
@@ -94,13 +98,6 @@ p+p{
 
 i {
   font-style: italic;
-}
-
-@media only screen and (max-width: 550px) {
-  h1 {
-    font-size:  34px;
-    line-height: 45px;
-  }
 }
 
 sup, sub {
