--- a/week 4/single column /css/style2.css
+++ b/week 4/single column /css/style2.css
@@ -34,6 +34,11 @@ h1{
    line-height: 27px;
 }
 
+img{
+  max-width: 100%;
+  max-height: 100%;
+  padding-top: 2em;
+}
 
 h2{
    font-family: minion-3, serif;
