--- a/week 4/single column /css/style3.css
+++ b/week 4/single column /css/style3.css
@@ -72,8 +72,11 @@ p+p+p+p+p+p{
    margin-left: 300px;
 }
 
-
-
+img{
+   max-width: 100%;
+   max-height: 100%;
+   padding-top: 2em;
+ }
 
 i {
   font-style: italic;
